[gd_scene load_steps=8 format=2]

[ext_resource path="res://Julian/Scenes/Game/Game.gd" type="Script" id=1]
[ext_resource path="res://Julian/Biomes/Biome1.tres" type="Resource" id=2]
[ext_resource path="res://Julian/Whale/Whale.tscn" type="PackedScene" id=3]
[ext_resource path="res://Art Folder/Sprites/background1.png" type="Texture" id=4]
[ext_resource path="res://Art Folder/Sprites/background2.png" type="Texture" id=5]
[ext_resource path="res://Art Folder/Sprites/background3.png" type="Texture" id=6]
[ext_resource path="res://Art Folder/Audio/music.ogg" type="AudioStream" id=7]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )
fish_container_path = NodePath("FishContainer")
biomes = [ ExtResource( 2 ) ]
init_biome = ExtResource( 2 )
fish_spawn_time = 0.8
backgrounds = [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ]
background_change_time = 30.0

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 4 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Whale" parent="." instance=ExtResource( 3 )]
outer_wave = {
"amplitude": 0.1,
"frequency": 0.167,
"init_altitude": 0.6
}
inner_wave = {
"amplitude": 0.125,
"frequency": 0.031
}

[node name="FishContainer" type="Node2D" parent="."]
z_index = 3

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Occluder" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true

[node name="FishSpawnTimer" type="Timer" parent="."]

[node name="BackgroundChangeTimer" type="Timer" parent="."]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
[connection signal="timeout" from="FishSpawnTimer" to="." method="_on_FishSpawnTimer_timeout"]
[connection signal="timeout" from="BackgroundChangeTimer" to="." method="_on_BackgroundChangeTimer_timeout"]
